add github workflows

--- a/deno.json
+++ b/deno.json
@@ -4,5 +4,9 @@
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
+  },
+  "deploy": {
+    "include": ["deno.json"],
+    "entrypoint": "./main.ts"
   }
 }
