--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
         uses: denoland/deployctl@v1
         with:
           project: "auto-complete"
-          entrypoint: "./main.ts"
-          root: "./src"
+          entrypoint: "./src/main.ts"
+          root: "./"
           
           
