--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,11 @@ jobs:
       - name: Install step
         run: "deno install"
 
+      - name: List files in src directory
+        run: |
+          ls -la src/
+          ls -la src/main.ts
+
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
