--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,11 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.ts"
+    "dev": "deno run --watch main.ts",
+    "run": "deno run --unstable-kv --allow-env --allow-net main.ts"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "@google/genai": "npm:@google/genai@^1.6.0",
+    "@std/assert": "jsr:@std/assert@1",
+    "openai": "npm:openai@^5.6.0"
   }
 }
