--- a/deno.json
+++ b/deno.json
@@ -5,6 +5,7 @@
   },
   "imports": {
     "@google/genai": "npm:@google/genai@^1.6.0",
+    "@hono/hono": "jsr:@hono/hono@^4.8.2",
     "@std/assert": "jsr:@std/assert@1",
     "openai": "npm:openai@^5.6.0"
   }
