--- a/deno.json
+++ b/deno.json
@@ -1,12 +1,11 @@
 {
   "tasks": {
     "dev": "deno run --watch main.ts",
-    "run": "deno run --unstable-kv --allow-env --allow-net main.ts"
+    "run": "deno run --unstable-kv --allow-env --allow-net ./src/main.ts"
   },
   "imports": {
-    "@google/genai": "npm:@google/genai@^1.6.0",
+    "@faker-js/faker": "npm:@faker-js/faker@^9.8.0",
     "@hono/hono": "jsr:@hono/hono@^4.8.2",
-    "@std/assert": "jsr:@std/assert@1",
-    "openai": "npm:openai@^5.6.0"
+    "@std/assert": "jsr:@std/assert@1"
   }
 }
